<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item android:id="@+id/action_add_comment"
          android:title="@string/action_add_comment"
          android:orderInCategory="100"
          android:icon="@drawable/ic_addcomment"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          android:icon="@drawable/ic_action_settings"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_pref"
        android:title="@string/preferencia"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/action_exit"
          android:title="@string/action_exit"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_exit_session"
          android:title="@string/action_exit_session"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_revoke_acces"
        android:title="@string/action_revoke_acces"
        android:orderInCategory="100"
        app:showAsAction="never"/>


</menu>
